# bomdia

./: .env.example  .gitignore  .pre-commit-config.yaml  .python-version  CHANGELOG.md  CONFIGURATION.md  DIA_CHANGES.md  EXTERNAL_DEPENDENCY_WARNINGS.md  README.md  generate_prompt.py  main.py  prototype.py  pyproject.toml  simple-transcript.txt  simple-two-moment.txt  split.sh  test_transcript.txt
assets/: bomdia-transcript.txt  minimum_generation.one_speaker.txt  no-rehearsal.txt  simple-transcript.txt  two-tag-budget-transcript.txt
config/: app.toml  prompts.toml
docs/components/: audio_generator.md  synthetic_voice_prompts.md  transcript_parser.md  verbal_tag_injector.md
docs/features/: agentic_flow.md  llm_verbal_tag_injection.md  observability.md
docs/guides/: observability.md
shared/: __init__.py  config.py  litellm_callbacks.py  llm_invoker.py  logging.py
shared/tests/: test_config.py
src/: pipeline.py
src/components/audio_generator/: __init__.py  chunker.py  tts.py
src/components/audio_generator/tests/: test_chunker.py
src/components/transcript_parser/: __init__.py  merger.py  parser.py
src/components/transcript_parser/tests/: test_merger.py  test_parser.py
src/components/verbal_tag_injector/: __init__.py  actor.py  director.py  llm_based.py  procedural_review.py  rehearsal_graph.py  rule_based.py  state.py  token_bucket.py  verbal_tag_injector_state.py
src/components/verbal_tag_injector/tests/: test_actor.py  test_director.py  test_director_helpers.py  test_procedural_review.py  test_rule_based.py
tests/: conftest.py  parser_debug.py  simple_parser_test.py  test_agentic_flow_integration.py  test_agentic_workflow.py  test_audio_generator_tts_coverage.py  test_device_selection.py  test_directors_final_cut_llm.py  test_directors_final_cut_llm.py.bak  test_generate_prompt.py  test_litellm_integration.py  test_main_integration.py  test_network_isolation.py  test_no_real_api_calls.py  test_pipeline.py  test_rehearsal_chunker_integration.py  test_seeding_determinism.py  test_synthetic_prompts_integration.py  test_transcript_parser.py  test_verbal_tag_injector.py
